# devsynth

./: .bandit  .bandit.yaml  .coveragerc  .coveragerc_utils  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .safety-policy.toml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_STATUS.md  DEVONBOARDING.md  DOCUMENTATION_HARMONIZATION_PLAN.md  DOCUMENTATION_HARMONIZATION_TASKS.md  Dockerfile  EDRR_FRAMEWORK_INTEGRATION_PLAN.md  EDRR_FRAMEWORK_INTEGRATION_SUMMARY.md  LICENSE  README.md  RELEASE_PLAN-PHASE_1.md  RELEASE_PLAN-PHASE_2.md  RELEASE_PLAN-PHASE_3.md  RELEASE_PLAN-PHASE_4.md  RELEASE_PLAN_UPDATE_PLAN.md  TASK_PROGRESS.md  Taskfile.yml  conftest.py  constitution.md  coverage_utils_current.txt  debug_coverage_test.py  devsynth_critical_recommendations.md  devsynth_dialectical_evaluation.md  devsynth_executive_summary.md  (+16 more)
.cursor/: CURSOR_INTEGRATION.md  CURSOR_SETUP.md  README.md  RULES_IMPLEMENTATION_SUMMARY.md  SELF_IMPROVEMENT.md  agent-workflows  integration-test.md  modes.json  rules.legacy  self_improvement.py  validate-rules.py  validate_self_improvement.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  branch_protection.yml  pull_request_template.md
artifacts/: README.md  llm_adapter_coverage.txt  mvuu_autoresearch_overlay_snapshot.json  mvuu_overlay_mock.html  reasoning_loop_additional_branches.json  reasoning_loop_fast_focus.json  tmp_reasoning_loop.json  webui_steps_collect.txt
config/: default.yml  development.yml  github_project.yml  jira.yml  lmstudio.yml  production.yml  prometheus.yml  staging.yml  testing.yml
deployment/: README.md  bootstrap_env.sh  bootstrap_with_health_check.sh  deploy_production.sh  docker-compose.monitoring.yml  docker-compose.yml  health_check.sh
diagnostics/: .gitkeep  README.md  adapters_subset.txt  autoresearch_graph_queries.md  bandit.txt  bandit_2025-09-10.txt  bandit_2025-09-10_run2.txt  bandit_2025-09-13.txt  bandit_2025-09-17.txt  bandit_report.txt  behavior_collection.txt  behavior_run_not_slow.txt  cli_run_tests_options.txt  cli_verification.txt  collect_segmentation_baseline.txt  coverage_summary.txt  devsynth_coverage_per_file_20251001T152201Z.txt  devsynth_mypy_strict_20251002T144042Z.txt  devsynth_mypy_strict_fast_medium_20251001T150000Z_compliance.txt  devsynth_run_tests_fast_medium_20250929T012243Z.txt  devsynth_run_tests_fast_medium_20250930T014103Z.txt  devsynth_run_tests_fast_medium_20250930T161600Z.txt  devsynth_run_tests_fast_medium_20250930T170112Z.txt  devsynth_run_tests_fast_medium_20251001T150000Z_coverage.txt  devsynth_run_tests_fast_medium_20251002T233820Z_summary.txt  docs_update_20250903.txt  doctor.txt  env_info_20251017T164629Z.txt  exec_log.txt  fast_coverage_verification.txt  final_rehearsal.txt  flake8_2025-09-10.txt  flake8_agents_memory_after.txt  flake8_precommit_enabled.txt  flake8_verification.txt  full_profile_coverage.txt  git_status_pre_commit_20251017T203327Z.txt  issues_grep_readiness.txt  issues_list.txt  lmstudio_fast_subset.txt  (+51 more)
docs/: AGENTS.md  Comprehensive DevSynth Enhancement Plan.md  DOCUMENTATION_UPDATE_PROGRESS.md  TESTING_STANDARDS.md  alignment_checklist.md  alignment_guidelines.md  alignment_review_process.md  code_analysis.md  codebase_analysis.md  configuration.md  continuous_alignment_process.md  dialectical_audit_gap_inventory.md  dialectical_audit_prioritization_roadmap.md  document_generator_enhancement_requirements.md  documentation_index.md  feature_audit.md  gap-matrix.md  glossary.md  index.md  llm_integration.md  lm_studio_integration.md  manifest_schema.json  metadata_template.md  multi-agent-consensus-convergence.md  plan.md  promise_system_scope.md  quick_start_guide.md  release_readiness_checklist.md  repo_structure.md  requirement_analysis_tests.md  requirements_traceability.md  requirements_traceability_script_limitations.md  resources_matrix.md  system_requirements_specification.md  task_notes.md  task_notes_increment.txt  tasks.md  technical_debt.md
examples/: critique_agent_example.py  s3_memory_backend_example.py  security_audit_failure_report.json  webui_headless.md
issues/: 102.md  103.md  104.md  105.md  106.md  107.md  108.md  109.md  110.md  111.md  112.md  113.md  114.md  115.md  116.md  117.md  118.md  119.md  120.md  121.md  122.md  123.md  124.md  125.md  126.md  127.md  128.md  129.md  130.md  131.md  Autoresearch-agent-specialization.md  Autoresearch-knowledge-graph-expansion.md  Autoresearch-traceability-dashboard.md  Complete-Sprint-EDRR-integration.md  Complete-memory-system-integration.md  Critical-recommendations-follow-up.md  Dialectical-audit-reports-missing-WebUI-Diagnostics-Page.md  Dialectical-audit-reports-undocumented-features.md  Document-API-reference-generation-feature.md  Enhance-retry-mechanism.md  (+320 more)
release_plan/: RELEASE_PLAN.md  metrics_feature.md
research_reports/: AgentNet-2504.00587v2.md
scripts/: README.md  add_breadcrumb_navigation.py  add_metadata_headers.py  add_missing_markers.py  add_missing_markers_enhanced.py  agent_api_testing.py  agentic_serper_search.py  alignment_check.py  analyze_breadcrumbs.py  analyze_marker_discrepancy.py  analyze_terminology.py  analyze_test_dependencies.py  append_exec_log.py  apply_markers_from_progress.py  apply_speed_markers.py  apply_test_markers.py  archive_deprecated.py  archive_fast_medium_coverage.py  audit_issues.py  audit_testing_scripts.py  auto_issue_comment.py  batch_apply_markers.py  bdd_marker_counter.py  bench_memory_backends.py  benchmark_test_execution.py  bump_version.py  capture_environment_baseline.py  capture_flake_rate.py  categorize_behavior_tests.py  categorize_tests.py  categorize_tests_improved.py  check_dev_environment.py  check_domain_dependencies.py  check_front_matter.py  check_heading_structure.py  check_internal_links.py  check_no_secrets.py  check_offline_defaults.sh  check_repo_hygiene.py  check_reqid.py  (+190 more)
site/: objects.inv
src/: AGENTS.md  sitecustomize.py
templates/: README.md  project.yaml  (+6 more)
(+3943 files in other folders)
